--- a/app/views/partials/_flash_messages.html.erb
+++ b/app/views/partials/_flash_messages.html.erb
@@ -1,17 +1,7 @@
 <!-- devise messages-->
 
-<%# if notice %>
-  <!-- <div class="alert alert-info"<%= notice %></div> -->
-<%# end %>
-<%# if alert %>
-  <!-- <div class="alert alert-warning"<%= alert %></div> -->
-<%# end %>
-
 <div class="container">
   <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>">
-      <%= value %>
-    </div>
-    <%#= content_tag :div, value, id: "flash_#{key}" %>
+    <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
 </div>
