--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= render partial: "partials/navbar" %>
 
     <div class="container">
-      <%= render partial: "partials/flash_messages" %>
+      <%= render partial: "partials/messages" %>
       <%= yield %>
     </div>
   </body>
