Rename field username and title to name, and add slugifiable for name field

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -17,7 +17,7 @@
           <!--Card content-->
           <div class="card-body">
             <!--Title-->
-            <h4 class="card-title"><%= recipe.title %></h4>
+            <h4 class="card-title"><%= recipe.name %></h4>
             <!--Text-->
             <p class="card-text"><%= recipe.description %></p>
             <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
