Move Bootstrap sass v3.3.7 to v4.1.3

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,30 +1,21 @@
 <!-- /recipes/index -->
 <div class="container">
-  <div class="row">
-    <!-- Card deck -->
-    <div class="card-deck">
-      <% @recipes.each do |recipe| %>
-        <!-- Card -->
-        <div class="card mb-4">
-          <!--Card image-->
-          <div class="view overlay">
-            <img class="card-img-top" src="<%= recipe.url_image %>" alt="Card image cap">
-            <a href="/recipes/<%= recipe.slug %>">
-              <div class="mask rgba-white-slight"></div>
-            </a>
-          </div>
-
-          <!--Card content-->
-          <div class="card-body">
-            <!--Title-->
-            <h4 class="card-title"><%= recipe.name %></h4>
-            <!--Text-->
-            <p class="card-text"><%= recipe.description %></p>
-            <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-            <button type="button" class="btn btn-light-blue btn-md">Read more</button>
-          </div>
-        </div> <!-- Card -->
-      <% end %>
-    </div> <!-- Card deck -->
-  </div> <!-- Row -->
+  <!-- Card columns -->
+  <div class="card-columns">
+    <% @recipes.each do |recipe| %>
+      <!-- Card -->
+      <div class="card bg-dark text-white">
+        <!--Card image-->
+        <a href="/recipes/<%= recipe.slug %>">
+          <img class="card-img-top" src="<%= recipe.url_image %>" alt="Card image cap">
+        </a>
+        <!--Card body -->
+        <div class="card-body">
+          <h4 class="card-title"><%= recipe.name %></h4>
+          <p class="card-text"><%= recipe.description %></p>
+          <button type="button" class="btn btn-light-blue btn-md">Read more</button>
+        </div> <!-- Card body -->
+      </div> <!-- Card -->
+    <% end %>
+  </div> <!-- Card columns -->
 </div> <!-- Container -->
