--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,19 +9,30 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
  */
 
-  @import "bootstrap-sprockets";
-  @import "bootstrap";
-  @import "bootstrap/theme";
+ // Custom bootstrap variables must be set or imported *before* bootstrap.
+ @import 'bootstrap-custom';
 
-  .alert-alert {
-    @extend .alert-warning;
-  }
+.alert-alert {
+  @extend .alert-warning;
+}
 
-  .alert-notice {
-    @extend .alert-info;
+.alert-notice {
+  @extend .alert-info;
+}
+
+.card-columns {
+  @include media-breakpoint-only(xl) {
+    column-count: 4;
   }
+  @include media-breakpoint-only(lg) {
+    column-count: 3;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(sm) {
+    column-count: 2;
+  }
+}
