Fixed top navbar with navbar-static-top and use default setting for card-columns

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,5 +1,6 @@
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- navbar-static-top instead of navbar-fixed-top to fix overlapping issue -->
+<nav class="navbar navbar-static-top navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Kitchen&Recipes</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,7 +11,7 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-    
+
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
