--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -24,7 +24,7 @@
       </li>
     </ul>
 
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
