Rename directory 'partials' to 'shared'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   </head>
 
   <body>
-    <%= render partial: "partials/navbar" %>
+    <%= render partial: "shared/navbar" %>
 
     <div class="container">
-      <%= render partial: "partials/messages" %>
+      <%= render partial: "shared/messages" %>
       <%= yield %>
     </div>
   </body>
