--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -9,8 +9,6 @@
 <div class="container-fluids">
   <!-- Card columns -->
   <div class="card-columns">
-    <% @recipes.each do |recipe| %>
-      <%= render partial: 'recipes/recipe', locals: {recipe: recipe} %>
-    <% end %>
+    <%= render partial: 'recipe', collection: @recipes %>
   </div> <!-- Card columns -->
 </div> <!-- Container -->
