--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -9,6 +9,6 @@
 <div class="container-fluids">
   <!-- Card columns -->
   <div class="card-columns">
-    <%= render partial: 'recipe', collection: @recipes %>
+    <%= render partial: 'recipes/recipe', collection: @recipes %>
   </div> <!-- Card columns -->
 </div> <!-- Container -->
