--- a/app/views/recipes/_instruction_fields.html.erb
+++ b/app/views/recipes/_instruction_fields.html.erb
@@ -1,6 +1,6 @@
-<!-- _instruction_fields -->
+<!-- /recipes/_instruction_fields -->
+
 <div class="nested-fields">
-  <%#= f.label :description, "Instruction" %>
   <%= f.text_field :description, class: "form-control" %>
   <div class="text-right">
     <%= link_to_remove_association f do %>
