--- a/app/views/recipes/_ingredient_fields.html.erb
+++ b/app/views/recipes/_ingredient_fields.html.erb
@@ -1,5 +1,6 @@
-<!-- _ingredient_fields -->
+<!-- /recipes/_ingredient_fields -->
 
 <div class="nested-fields">
+  or
   <%= f.text_field :name, placeholder: 'enter a new ingredient' %>
 </div>
