--- a/app/views/recipes/_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_recipe_ingredient_fields.html.erb
@@ -9,17 +9,17 @@
     <div class="col">
       <%= f.label :measurement_id, "Measurement" %>
       <%= f.collection_select :measurement_id, Measurement.order(:unit), :id, :unit, prompt: '(none)' %>
-   </div>
-   <div class="col">
-     <%= f.collection_select :ingredient_id, Ingredient.order(:name), :id, :name, prompt: 'Choose an existing ingredient' %>
-     <%= f.fields_for :ingredients do |ingredient_builder| %>
-       <%# raise ingredient_builder.inspect %>
-       <%= render partial: 'ingredient_fields', locals: { f: ingredient_builder } %>
-     <% end %>
-   </div>
-   <div class="col">
-     <%= f.label :description, "Ingredient description" %>
-     <%= f.text_field :description, class: "form-control" %>
+    </div>
+    <div class="col">
+      <%= f.collection_select :ingredient_id, Ingredient.order(:name), :id, :name, prompt: 'Choose an existing ingredient' %>
+      <%= f.fields_for :ingredients do |ingredient_builder| %>
+        <%# raise ingredient_builder.inspect %>
+        <%= render partial: 'ingredient_field', locals: { f: ingredient_builder } %>
+      <% end %>
+    </div>
+    <div class="col">
+      <%= f.label :description, "Ingredient description" %>
+      <%= f.text_field :description, class: "form-control" %>
     </div>
   </div>
   <div class="text-right">
