--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -29,12 +29,12 @@
 
   <div class="form-group">
       <%= f.label :prep_time, "Prep Time (hrs:min):" %>
-      <%= f.time_select :prep_time, min: "00:00", max: "24:00", default: { hour: "0", min: "0"}, ignore_date: true %>
+      <%= f.time_select :prep_time, {minute_step: 5, default: { hour: '0', minute: '0'}}, min: "00:00", max: "24:00", ignore_date: true %>
   </div>
 
   <div class="form-group">
       <%= f.label :cook_time, "Cook Time (hrs:min):" %>
-      <%= f.time_select :cook_time, min: "00:00", max: "24:00", default: { hour: "0", min: "0"}, ignore_date: true %>
+      <%= f.time_select :cook_time, {minute_step: 5, default: { hour: '0', minute: '0'}}, min: "00:00", max: "24:00", ignore_date: true %>
   </div>
 
   Ingredients:
