--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,7 +7,7 @@
     <p><%= @recipe.description %></p>
   </div>
 
-  <p><strong>Yield:</strong> <%= @recipe.yield %> <%= @recipe.yield_size %></p>
+  <p><strong>Yields:</strong> <%= @recipe.yields %> <%= @recipe.yields_size %></p>
   <p><strong>Prep time:</strong> <%= @recipe.prep_time.strftime("%H hrs %M min") %></p>
   <p><strong>Cook time:</strong> <%= @recipe.cook_time.strftime("%H hrs %M min") %></p>
 
