--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,8 +24,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :avatar %><br />
-    <%= f.file_field :avatar, autofocus: true, autocomplete: "avatar", accept: "image/png, image/gif, image/jpec" %>
+    <%= f.label :avatar, "Upload avatar photo:" %><br />
+    <%= f.file_field :avatar, autofocus: true, autocomplete: "avatar", accept: "image/gif, image/png, image/jpg, image/jpeg" %>
   </div>
 
   <div class="field">
