--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -44,6 +44,7 @@
   Ingredients:
   <div class="form-group">
     <div class="recipe_ingredients">
+      <!-- sort recipe_ingredients by id in ascending order or edit action -->
       <%= f.fields_for :recipe_ingredients, (recipe.recipe_ingredients.ordered_recipe_ingredients if f.object.id) do |ri_builder| %>
         <%# raise ri_builder.inspect %>
         <%= render partial: 'recipe_ingredient_fields', locals: { f: ri_builder } %>
@@ -58,6 +59,7 @@
   <div class="form-group">
     Instructions:
     <div class="instructions">
+      <!-- sort instructions by id in ascending order for edit action -->
       <%= f.fields_for :instructions, (recipe.instructions.ordered_instructions if f.object.id) do |instruction_builder| %>
       <%#= f.fields_for :instructions, (recipe.ordered_instructions.order("id ASC") if f.object.id) do |instruction_builder| %>
         <%# raise instruction_builder.inspect %>
@@ -71,7 +73,7 @@
 
   <!-- Image and other flags -->
   <div class="form-group">
-    <%= f.label :image, "Add a photo:" %>
+    <%= f.label :image, "Upload recipe photo:" %>
     <%= f.file_field :image, accept: "image/gif, image/png, image/jpg, image/jpeg", class: "form-control-file" %>
   </div>
 
