--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
       </li>
       <!-- Browse category by type -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Browse
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -41,31 +41,37 @@
 
   <ul class="navbar-nav navbar-right">
     <% if user_signed_in? %>
-    <!-- Avatar -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <%= image_tag current_user.avatar, class: "img-thumbnail", style: "max-height: 35px; max-width: 35px;" %>
-        <span class="caret"></span>
-      </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="<%= edit_user_registration_path %>"><%= current_user.name.titleize %><br/>Profile</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-item">
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+      <!-- Avatar / dashboard-->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= image_tag current_user.avatar, class: "img-thumbnail", style: "max-height: 35px; max-width: 35px;" %>
+          <span class="caret"></span>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="<%= edit_user_registration_path %>"><%= current_user.name.titleize %><br/>Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item">My Dashboard</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Favorites</a>
+          <a class="dropdown-item" href="#">Reviews</a>
+          <a class="dropdown-item" href="#">Recipes</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Add a Recipe</a>
+          <div class="dropdown-divider"></div>
+          <div class="dropdown-item">
+            <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          </div>
         </div>
-      </div>
-    </li>
+      </li>
     <% else %>
-    <!-- New user registration/session -->
-    <li class="nav-item">
-      <a class="nav-link" href="<%= new_user_registration_path %>">Sign Up</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="<%= new_user_session_path %>">Login</a>
-    </li>
+      <!-- New user registration/session -->
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_user_registration_path %>">Sign Up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_user_session_path %>">Login</a>
+      </li>
     <% end %>
   </ul>
 </nav>
